@@ -1,5 +1,9 @@
 2018-06-22  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el
+	(ebuild-mode-keywords-eclass-documentation): Update keywords
+	from eclass-to-manpage.awk.
+
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi-deprecated)
 	(ebuild-mode-keywords-0): dolib and libopts are deprecated.
 	(ebuild-mode-keywords-eapi7): New variable for EAPI 7 commands.
